# libmath-clone

./: CMakeLists.txt  README.md
.github/workflows/: code-coverage.yml
examples/: CMakeLists.txt  main.cpp
include/: arithmetic.h  factorial.h  gcd.h  matrix.h  prime.h
src/: CMakeLists.txt  arithmetic.cpp  factorial.cpp  gcd.cpp  matrix.cpp  prime.cpp
tests/: CMakeLists.txt  test_arithmetic.cpp  test_factorial.cpp  test_gcd.cpp  test_matrix.cpp  test_prime.cpp
